--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -94,7 +94,7 @@ outputs:
         - pytest
       run:
         - ${{ pin_subpackage(cxx_name, exact=true) }}
-        - pythons
+        - python
 
     tests:
       - python:
