MNT: Re-rendered with conda-smithy 3.52.0 and conda-forge-pinning 2025.08.27.10.42.49
Other tools:
- conda-build 25.7.0
- rattler-build 0.46.0
- rattler-build-conda-compat 1.4.5

--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -11,14 +11,14 @@ jobs:
       osx_64_channel_sourcesconda-forge:
         CONFIG: osx_64_channel_sourcesconda-forge
         UPLOAD_PACKAGES: 'True'
-      osx_64_channel_sourcesconda-forge,conda-forge/label/python_rc:
-        CONFIG: osx_64_channel_sourcesconda-forge,conda-forge/label/python_rc
+      osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc:
+        CONFIG: osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc
         UPLOAD_PACKAGES: 'True'
       osx_arm64_channel_sourcesconda-forge:
         CONFIG: osx_arm64_channel_sourcesconda-forge
         UPLOAD_PACKAGES: 'True'
-      osx_arm64_channel_sourcesconda-forge,conda-forge/label/python_rc:
-        CONFIG: osx_arm64_channel_sourcesconda-forge,conda-forge/label/python_rc
+      osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc:
+        CONFIG: osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc
         UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
   variables: {}
