--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -11,8 +11,8 @@ jobs:
       win_64_channel_sourcesconda-forge:
         CONFIG: win_64_channel_sourcesconda-forge
         UPLOAD_PACKAGES: 'True'
-      win_64_channel_sourcesconda-forge,conda-forge/label/python_rc:
-        CONFIG: win_64_channel_sourcesconda-forge,conda-forge/label/python_rc
+      win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc:
+        CONFIG: win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc
         UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
   variables:
