--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -12,24 +12,24 @@ jobs:
         CONFIG: linux_64_channel_sourcesconda-forge
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_64_channel_sourcesconda-forge,conda-forge/label/python_rc:
-        CONFIG: linux_64_channel_sourcesconda-forge,conda-forge/label/python_rc
+      linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc:
+        CONFIG: linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
       linux_aarch64_channel_sourcesconda-forge:
         CONFIG: linux_aarch64_channel_sourcesconda-forge
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_aarch64_channel_sourcesconda-forge,conda-forge/label/python_rc:
-        CONFIG: linux_aarch64_channel_sourcesconda-forge,conda-forge/label/python_rc
+      linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc:
+        CONFIG: linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
       linux_ppc64le_channel_sourcesconda-forge:
         CONFIG: linux_ppc64le_channel_sourcesconda-forge
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
-      linux_ppc64le_channel_sourcesconda-forge,conda-forge/label/python_rc:
-        CONFIG: linux_ppc64le_channel_sourcesconda-forge,conda-forge/label/python_rc
+      linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc:
+        CONFIG: linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
   timeoutInMinutes: 360
