--- a/pixi.toml
+++ b/pixi.toml
@@ -7,7 +7,7 @@
 
 [project]
 name = "gz-math-feedstock"
-version = "3.51.1"  # conda-smithy version used to generate this file
+version = "3.52.0"  # conda-smithy version used to generate this file
 description = "Pixi configuration for conda-forge/gz-math-feedstock"
 authors = ["@conda-forge/gz-math"]
 channels = ["conda-forge"]
@@ -31,39 +31,76 @@ description = "Build gz-math-feedstock with variant linux_64_channel_sourcescond
 [tasks."inspect-linux_64_channel_sourcesconda-forge"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_channel_sourcesconda-forge.yaml"
 description = "List contents of gz-math-feedstock packages built for variant linux_64_channel_sourcesconda-forge"
+[tasks."build-linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "Build gz-math-feedstock with variant linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc directly (without setup scripts)"
+[tasks."inspect-linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "List contents of gz-math-feedstock packages built for variant linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"
 [tasks."build-linux_aarch64_channel_sourcesconda-forge"]
 cmd = "rattler-build build --recipe recipe -m .ci_support/linux_aarch64_channel_sourcesconda-forge.yaml"
 description = "Build gz-math-feedstock with variant linux_aarch64_channel_sourcesconda-forge directly (without setup scripts)"
 [tasks."inspect-linux_aarch64_channel_sourcesconda-forge"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_aarch64_channel_sourcesconda-forge.yaml"
 description = "List contents of gz-math-feedstock packages built for variant linux_aarch64_channel_sourcesconda-forge"
+[tasks."build-linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "Build gz-math-feedstock with variant linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc directly (without setup scripts)"
+[tasks."inspect-linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "List contents of gz-math-feedstock packages built for variant linux_aarch64_channel_sourcesconda-forgeconda-forgelabelpython_rc"
 [tasks."build-linux_ppc64le_channel_sourcesconda-forge"]
 cmd = "rattler-build build --recipe recipe -m .ci_support/linux_ppc64le_channel_sourcesconda-forge.yaml"
 description = "Build gz-math-feedstock with variant linux_ppc64le_channel_sourcesconda-forge directly (without setup scripts)"
 [tasks."inspect-linux_ppc64le_channel_sourcesconda-forge"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_ppc64le_channel_sourcesconda-forge.yaml"
 description = "List contents of gz-math-feedstock packages built for variant linux_ppc64le_channel_sourcesconda-forge"
+[tasks."build-linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "Build gz-math-feedstock with variant linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc directly (without setup scripts)"
+[tasks."inspect-linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "List contents of gz-math-feedstock packages built for variant linux_ppc64le_channel_sourcesconda-forgeconda-forgelabelpython_rc"
 [tasks."build-osx_64_channel_sourcesconda-forge"]
 cmd = "rattler-build build --recipe recipe -m .ci_support/osx_64_channel_sourcesconda-forge.yaml"
 description = "Build gz-math-feedstock with variant osx_64_channel_sourcesconda-forge directly (without setup scripts)"
 [tasks."inspect-osx_64_channel_sourcesconda-forge"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_channel_sourcesconda-forge.yaml"
 description = "List contents of gz-math-feedstock packages built for variant osx_64_channel_sourcesconda-forge"
+[tasks."build-osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "Build gz-math-feedstock with variant osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc directly (without setup scripts)"
+[tasks."inspect-osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "List contents of gz-math-feedstock packages built for variant osx_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"
 [tasks."build-osx_arm64_channel_sourcesconda-forge"]
 cmd = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_channel_sourcesconda-forge.yaml"
 description = "Build gz-math-feedstock with variant osx_arm64_channel_sourcesconda-forge directly (without setup scripts)"
 [tasks."inspect-osx_arm64_channel_sourcesconda-forge"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_channel_sourcesconda-forge.yaml"
 description = "List contents of gz-math-feedstock packages built for variant osx_arm64_channel_sourcesconda-forge"
+[tasks."build-osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "Build gz-math-feedstock with variant osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc directly (without setup scripts)"
+[tasks."inspect-osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "List contents of gz-math-feedstock packages built for variant osx_arm64_channel_sourcesconda-forgeconda-forgelabelpython_rc"
 [tasks."build-win_64_channel_sourcesconda-forge"]
 cmd = "rattler-build build --recipe recipe -m .ci_support/win_64_channel_sourcesconda-forge.yaml"
 description = "Build gz-math-feedstock with variant win_64_channel_sourcesconda-forge directly (without setup scripts)"
 [tasks."inspect-win_64_channel_sourcesconda-forge"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_channel_sourcesconda-forge.yaml"
 description = "List contents of gz-math-feedstock packages built for variant win_64_channel_sourcesconda-forge"
+[tasks."build-win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "Build gz-math-feedstock with variant win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc directly (without setup scripts)"
+[tasks."inspect-win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc.yaml"
+description = "List contents of gz-math-feedstock packages built for variant win_64_channel_sourcesconda-forgeconda-forgelabelpython_rc"
 
 [feature.smithy.dependencies]
 conda-smithy = "*"
+shellcheck = "*"
 [feature.smithy.tasks.build-locally]
 cmd = "python ./build-locally.py"
 description = "Build packages locally using the same setup scripts used in conda-forge's CI"
