--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -58,7 +58,7 @@ outputs:
               - test -f ${PREFIX}/lib/lib${{ name }}${SHLIB_EXT}
             else:
               - if not exist %PREFIX%\Library\lib\cmake\${{ name }}\${{ name }}-config.cmake exit 1
-              - if not exist %PREFIX%\\Library\\include\\gz\\{{ component_version }}\\gz\\{{ component_name }}.hh
+              - if not exist %PREFIX%\\Library\\include\\gz\\${{ component_version }}\\gz\\${{ component_name }}.hh
               - if not exist %PREFIX%\Library\lib\${{ name }}.lib exit 1
               - if not exist %PREFIX%\Library\bin\${{ name }}.dll exit 1
   - package:
@@ -116,7 +116,7 @@ outputs:
               - test -f ${PREFIX}/lib/lib${{ name }}${SHLIB_EXT}
             else:
               - if not exist %PREFIX%\Library\lib\cmake\${{ name }}\${{ name }}-config.cmake exit 1
-              - if not exist %PREFIX%\Library\include\gz\{{ component_version }}\gz\{{ component_name }}.hh
+              - if not exist %PREFIX%\Library\include\gz\${{ component_version }}\gz\${{ component_name }}.hh
               - if not exist %PREFIX%\Library\lib\${{ name }}.lib exit 1
               - if not exist %PREFIX%\Library\bin\${{ name }}.dll exit 1
       - python:
