--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -57,10 +57,10 @@ outputs:
               - test -f ${PREFIX}/include/gz/${{ component_version }}/gz/${{ component_name }}.hh
               - test -f ${PREFIX}/lib/lib${{ name }}${SHLIB_EXT}
             else:
-              - if not exist %PREFIX%\Library\lib\cmake\${{ name }}\${{ name }}-config.cmake exit 1
+              - if not exist %PREFIX%\\Library\lib\cmake\${{ name }}\${{ name }}-config.cmake exit 1
               - if not exist %PREFIX%\\Library\\include\\gz\\${{ component_version }}\\gz\\${{ component_name }}.hh
-              - if not exist %PREFIX%\Library\lib\${{ name }}.lib exit 1
-              - if not exist %PREFIX%\Library\bin\${{ name }}.dll exit 1
+              - if not exist %PREFIX%\\Library\\lib\\${{ name }}.lib exit 1
+              - if not exist %PREFIX%\\Library\\bin\\${{ name }}.dll exit 1
   - package:
       name: ${{ python_name }}
     build:
@@ -115,10 +115,10 @@ outputs:
               - test -f ${PREFIX}/include/gz/${{ component_version }}/gz/${{ component_name }}.hh
               - test -f ${PREFIX}/lib/lib${{ name }}${SHLIB_EXT}
             else:
-              - if not exist %PREFIX%\Library\lib\cmake\${{ name }}\${{ name }}-config.cmake exit 1
-              - if not exist %PREFIX%\Library\include\gz\${{ component_version }}\gz\${{ component_name }}.hh
-              - if not exist %PREFIX%\Library\lib\${{ name }}.lib exit 1
-              - if not exist %PREFIX%\Library\bin\${{ name }}.dll exit 1
+              - if not exist %PREFIX%\\Library\\lib\\cmake\\${{ name }}\${{ name }}-config.cmake exit 1
+              - if not exist %PREFIX%\\Library\\include\\gz\\${{ component_version }}\gz\${{ component_name }}.hh
+              - if not exist %PREFIX%\\Library\\lib\\${{ name }}.lib exit 1
+              - if not exist %PREFIX%\\Library\\bin\\${{ name }}.dll exit 1
       - python:
           imports:
             - gz.math7
