Fix expected location of headers

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -51,7 +51,7 @@ outputs:
     tests:
       - package_contents:
           include:
-            - "gz/${{ component_name }}/gz/${{ component_name }}.hh"
+            - "gz/${{ component_name }}${{ major_version }}/gz/${{ component_name }}.hh"
           lib:
             - ${{ name }}
       - script:
